--- a/emds.ViewTrainLog/MainWindow.xaml
+++ b/emds.ViewTrainLog/MainWindow.xaml
@@ -1,25 +1,165 @@
-﻿<Window x:Class="emds.ViewTrainLog.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:diag="http://mindfusion.eu/diagramming/wpf" x:Name="___Без_имени_" x:Class="emds.ViewTrainLog.MainWindow"
+        xmlns:l="clr-namespace:emds.ViewTrainLog"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <l:ListBoxItemWidthConverter x:Key="ListBoxItemWidthConverterX" />
+        <Style x:Key="ListBoxItemStyleVariable" TargetType="{x:Type ListBoxItem}">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+            <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+            <Setter Property="Padding" Value="2,0,0,0"/>
+            <Setter Property="Width" Value="{Binding ActualWidth, ElementName=listBox, Converter={StaticResource ListBoxItemWidthConverterX}}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                        <Border x:Name="Bd" 
+                                BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                Background="{TemplateBinding Background}" 
+                                Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
+                            <TextBlock Name="textBlockDomenName" TextWrapping="Wrap" Height="{TemplateBinding Height}" Text="{TemplateBinding Content}" Width="{TemplateBinding Width}" Padding="2,0,2,0" Margin="0,0,-2,0" VerticalAlignment="Top"/>
+                            <!--<TextBlock x:Name="textBlockDomenName"
+                                     IsEnabled="False"
+                                     FontSize="12" Text="{TemplateBinding Content}" 
+                                     Height="20" HorizontalAlignment="Stretch" Margin="2,0,4,0" TextWrapping="Wrap"/>-->
+
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter TargetName="textBlockDomenName" Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                                <Setter TargetName="textBlockDomenName" Property="Background" Value="White" />
+                            </Trigger>
+                            <Trigger SourceName="textBlockDomenName" Property="IsFocused" Value="true">
+                                <Setter Property="Height" Value="40"/>
+                                <Setter Property="IsSelected" Value="True" />
+                            </Trigger>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
+                            </Trigger>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsSelected" Value="true"/>
+                                    <Condition Property="Selector.IsSelectionActive" Value="false"/>
+                                </MultiTrigger.Conditions>
+                                <Setter Property="Background" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+                                <Setter TargetName="textBlockDomenName" Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                            </MultiTrigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="25*"/>
-            <ColumnDefinition Width="80*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25" />
+            <RowDefinition Height="24" />
             <RowDefinition Height="32" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ToolBar Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Stretch">
-            <ComboBox Height="26" Margin="0" VerticalAlignment="Top" Width="120"/>
+        <ToolBar Grid.Row="1" VerticalAlignment="Stretch">
+            <ComboBox x:Name="cbTrainsLog" Height="26" Margin="5,1,0,0" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" Initialized="cbTrainsLog_Initialized" SelectionChanged="cbTrainsLog_SelectionChanged"/>
         </ToolBar>
-        <Menu Grid.ColumnSpan="2" Grid.Row="0">
+        <Menu Grid.Row="0">
             <MenuItem Header="Тык">
                 <MenuItem Header="Тык2"/>
             </MenuItem>
         </Menu>
+        <TabControl Grid.Row="2" Grid.RowSpan="2">
+            <TabItem Header="Общая информация" x:Name="tiCommonInf">
+                <Grid Background="#FFE5E5E5" >
+                    <Label Content="Анкета:" HorizontalAlignment="Left" Margin="138,10,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Сеть:" HorizontalAlignment="Left" Margin="150,41,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Итераций обучения:" HorizontalAlignment="Left" Margin="64,72,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Размер обучающей выборки: " HorizontalAlignment="Left" Margin="14,103,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Right"/>
+                    <Label Content="{Binding SelectedItem.Anketa, ElementName=cbTrainsLog}" x:Name="lAnketa" HorizontalAlignment="Left" Margin="196,10,0,0" VerticalAlignment="Top"/>
+                    <Label Content="{Binding SelectedItem.NeuralNetName, ElementName=cbTrainsLog}" x:Name="lNeuralNetName" HorizontalAlignment="Left" Margin="196,41,0,0" VerticalAlignment="Top"/>
+                    <Label Content="{Binding SelectedItem.IterationCount, ElementName=cbTrainsLog}" x:Name="lIterationCount" HorizontalAlignment="Left" Margin="196,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.4,8.2"/>
+                    <Label Content="{Binding SelectedItem.TrainDataSize, ElementName=cbTrainsLog}" x:Name="lTrainDataSize" HorizontalAlignment="Left" Margin="196,103,0,0" VerticalAlignment="Top"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Данные итерации" x:Name="tiTrainInf">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="100" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <ComboBox Grid.Row="0" x:Name="cbAgeNumber" HorizontalAlignment="Left" Margin="91,10,0,0" VerticalAlignment="Top" Width="75" IsEditable="True" SelectionChanged="cbAgeNumber_SelectionChanged" ToolTip="Итерации обучения" />
+                    <ComboBox Grid.Row="0" x:Name="cbParametrs" HorizontalAlignment="Left" Margin="91,38,0,0" VerticalAlignment="Top" Width="119" IsEditable="False" ToolTip="Параметры" SelectedIndex="0" SelectionChanged="cbParametrs_SelectionChanged" >
+                        <ComboBoxItem Content="Веса до итерации"/>
+                        <ComboBoxItem Content="Градиент (R)"/>
+                        <ComboBoxItem Content="Веса после итерации"/>
+                    </ComboBox>
+                    <Label Grid.Row="0" Content="Ошибка сети на итерации:" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
+                    <Label Grid.Row="0" Content="{Binding SelectedItem.CurrentError, ElementName=cbAgeNumber}" HorizontalAlignment="Left" Margin="171,65,0,0" VerticalAlignment="Top"/>
+                    <Separator Grid.Row="0" Height="3" VerticalAlignment="Bottom"/>
+                    <Grid Grid.Row="1">
+                        <!--<Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="25*" />
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="70*" />
+                        </Grid.ColumnDefinitions>-->
+                        
+                        <ScrollViewer Grid.Column="2" Name="scrollViewer1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" Height="Auto" HorizontalScrollBarVisibility="Visible">
+                            <diag:Diagram Name="testD" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                        Width="Auto" Height="Auto" Bounds="0,0,1093.70078740158,1122.51968503937" AutoResize="AllDirections" DelKeyAction="DeleteActiveItem" ShowGrid="False" Margin="0">
+                                <diag:Diagram.LinkRouter>
+                                    <diag:QuickRouter TurnCost="50" UBendMaxLen="30" />
+                                </diag:Diagram.LinkRouter>
+                            </diag:Diagram>
+                        </ScrollViewer>
+                        
+                        <!--<GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" MinWidth="3" Width="5"/>-->
+                        <!--<ListBox x:Name="listBox" Grid.Column="0" HorizontalAlignment="Stretch" Height="auto" VerticalAlignment="Stretch" Width="auto"
+                                 ItemContainerStyle="{StaticResource ListBoxItemStyleVariable}">
+                            <ListBoxItem Content="djnsadfsadf asd fljsadlfj sadfkljds flajsdl lsdkf j" Height="40" />
+                            <ListBoxItem Content="djnsadfsadf asd fljsa" Height="30" />
+                        </ListBox>-->
+
+                    </Grid>
+                    <Label Content="Итерация" HorizontalAlignment="Left" Margin="19,6,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Параметры" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top"/>
+                    <Button x:Name="btPlusAgeNumber" Content="+" HorizontalAlignment="Left" Margin="171,10,0,0" VerticalAlignment="Top" Width="24" Height="22" Click="btPlusAgeNumber_Click"/>
+                    <Button x:Name="btMinusAgeNumber" Content="-" HorizontalAlignment="Left" Margin="200,10,0,0" VerticalAlignment="Top" Width="24" Height="22" Click="btMinusAgeNumber_Click"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Данные" x:Name="tiProcessPair">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="70" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <ComboBox Grid.Row="0" x:Name="cbProcessPair" HorizontalAlignment="Left" Margin="104,10,0,0" VerticalAlignment="Top" Width="75" IsEditable="True" ToolTip="Номер набора данных" SelectionChanged="cbProcessPair_SelectionChanged"/>
+                    <Label Grid.Row="0" Content="Набор данных" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.079,0.038"/>
+                    <Label Grid.Row="0" Content="Параметры" HorizontalAlignment="Left" Margin="26,0,0,12" VerticalAlignment="Bottom" RenderTransformOrigin="-0.079,0.038"/>
+                    <ComboBox Grid.Row="0" x:Name="cbParametrsPair" HorizontalAlignment="Left" Margin="104,36,0,0" VerticalAlignment="Top" Width="160" IsEditable="False" ToolTip="Параметры" SelectedIndex="0" SelectionChanged="cbParametrsPair_SelectionChanged" >
+                        <ComboBoxItem Content="Градиент"/>
+                        <ComboBoxItem Content="Суммы до активации"/>
+                        <ComboBoxItem Content="Значения после активации"/>
+                        <ComboBoxItem Content="Ошибки на нейронах"/>
+                        <ComboBoxItem Content="Дельта"/>
+                    </ComboBox>
+                    <Button x:Name="btPlusPairNumber" Content="+" HorizontalAlignment="Left" Margin="184,11,0,0" VerticalAlignment="Top" Width="24" Height="22" Click="btPlusPairNumber_Click"/>
+                    <Button x:Name="btMinusPairNumber" Content="-" HorizontalAlignment="Left" Margin="213,11,0,0" VerticalAlignment="Top" Width="24" Height="22" Click="btMinusPairNumber_Click"/>
+                    <ScrollViewer Grid.Row="1" Name="scrollViewer2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="Auto" Height="Auto" HorizontalScrollBarVisibility="Visible">
+                        <diag:Diagram Name="pairDiagram" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                                        Width="Auto" Height="Auto" Bounds="0,0,1093.70078740158,1122.51968503937" AutoResize="AllDirections" DelKeyAction="DeleteActiveItem" ShowGrid="False" Margin="0">
+                            <diag:Diagram.LinkRouter>
+                                <diag:QuickRouter TurnCost="50" UBendMaxLen="30" />
+                            </diag:Diagram.LinkRouter>
+                        </diag:Diagram>
+                    </ScrollViewer>
+                </Grid>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
